fixing overflow issue

--- a/index.css
+++ b/index.css
@@ -286,4 +286,7 @@ a:visited {
     .rain1 {
         display: none;
     }
+    body {
+       overflow-x:hidden;
+    }
 }
